--- a/views/resultStraightLine.ejs
+++ b/views/resultStraightLine.ejs
@@ -20,7 +20,7 @@
     .container {
       background-color: white;
       min-height: 400px;
-      min-width: 300px;
+      min-width: 650px;
       padding: 30px;
       border-radius: 10px;
       box-shadow: black 3px 3px 8px;
@@ -49,10 +49,7 @@
           </tr>
         </thead>
         <tbody>
-           
           <% const depreciationDetails = result.depreciationDetails %>
-
-
           <% depreciationDetails.forEach(detail => {%> 
           <tr>
             <th scope="row"> <%= detail.year%> </th>
@@ -65,7 +62,7 @@
           <% }); %> 
         </tbody>
       </table>
-      
+      <a class="btn btn-primary" href="http://localhost:<%= process.env.PORT %>">Calculate Again</a>
     </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
